actualiza tests